--- a/project/all/index.html
+++ b/project/all/index.html
@@ -83,7 +83,7 @@
 </div>
 
 <div class="container">
-        <input id="search" type="text" class="folder" placeholder="Search (36) projects..." />
+        <input id="search" type="text" class="folder" placeholder="Search (37) projects..." />
 
         <div class="folder" data-search="chromium updater">
             <h2 class="folder-heading">
@@ -934,6 +934,39 @@ https://github.com/neptuo/Productivity</span></a>.
                         <li>
                             Current version can be downloaded from <a target="_blank" href="https://www.myget.org/F/neptuo-dev/vsix/">MyGet VSIX Feed</a>.
                         </li>
+                </ul>
+            </article>
+            <div class="clear"></div>
+        </div>
+        <div class="folder" data-search="neptuo.productivity.lineduplication">
+            <h2 class="folder-heading">
+                    <img src="/Content/Images/Projects/vsix-icon.png" class="folder-icon" />
+
+                <a href="/project/vsix/lineduplication">Neptuo.Productivity.LineDuplication</a>
+            </h2>
+            <article>
+                <ul>
+                        <li>Selected line(s) duplication feature for VisualStudio.</li>
+
+                        <li>
+                            <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0"><span>Licensed under Apache License, Version 2.0</span></a>.
+                        </li>
+
+                        <li>
+                            <a target="_blank" href="https://github.com/neptuo/Productivity/releases">Project documentation</a>.
+                        </li>
+
+                        <li>
+                            Source code at
+                            <a target="_blank" href="https://github.com/neptuo/Productivity"><span>
+https://github.com/neptuo/Productivity</span></a>.
+                        </li>
+                    
+                        <li>
+                            Release of the <a target="_blank" href="https://marketplace.visualstudio.com/vsgallery/3562a3cf-6718-42b5-ac48-697806e9c41a">Neptuo.Productivity.LineDuplication v1.0 to download</a>.
+                        </li>
+
+
                 </ul>
             </article>
             <div class="clear"></div>
