Add WinRun-v1.7.0. Fix month names in blog.

--- a/project/desktop/winrun/index.html
+++ b/project/desktop/winrun/index.html
@@ -97,7 +97,7 @@
 
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/winrun">WinRun v1.6.0 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/winrun">WinRun v1.7.0 to download</a>.
                         </li>
 
 
@@ -131,6 +131,18 @@
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.7.0</strong>
+                                    <ul>
+
+                                            <li>
+                                                Tray Icon.
+                                            </li>
+                                            <li>
+                                                Fix crashing when virtual desktop is not available.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.6.0</strong>
                                     <ul>
