--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -102,7 +102,7 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                         </li>
                     
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.8.0 to download</a>.
+                            Release of the <a target="_blank" href="http://apps.neptuo.com/solution-runner">Solution Runner v1.9.0 to download</a>.
                         </li>
 
                             <li>
@@ -142,6 +142,24 @@ https://github.com/neptuo/Productivity.SolutionRunner</span></a>.
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li>
+                                <strong>v1.9.0</strong>
+                                    <ul>
+
+                                            <li>
+                                                Added a light theme.
+                                            </li>
+                                            <li>
+                                                Added an option to show a little badge after solution name with count of projects in the solution file.
+                                            </li>
+                                            <li>
+                                                Additional application can now contain additional commands. These are Alt + Key1 + Key2 extensions to the additional application. 
+                                            </li>
+                                            <li>
+                                                Added visualization of an application hotkey when Alt is pressed.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li>
                                 <strong>v1.8.0</strong>
                                     <ul>
