--- a/project/desktop/gitextensions.pluginmanager/index.html
+++ b/project/desktop/gitextensions.pluginmanager/index.html
@@ -89,11 +89,10 @@
 
 <div class="container">
 
-        <div class="folder" data-search="chromium updater">
+        <div class="folder" data-search="gitextensions: plugin manager">
             <h2 class="folder-heading">
-                    <img src="/Content/Images/Projects/chromium-updater-icon.png" class="folder-icon" />
 
-                <a href="/project/desktop/chromiumupdater">Chromium Updater</a>
+                <a href="/project/desktop/gitextensions.pluginmanager">GitExtensions: Plugin Manager</a>
             </h2>
             <article>
                 <ul>
@@ -102,15 +101,15 @@
 
                         <li>
                             Source code at
-                            <a target="_blank" href="https://github.com/maraf/ChromiumUpdater">
+                            <a target="_blank" href="https://github.com/maraf/GitExtensions.PluginManager">
                                 <span>
-https://github.com/maraf/ChromiumUpdater</span></a>.
+https://github.com/maraf/GitExtensions.PluginManager                                </span>
+                            </a>.
                         </li>
 
                         <li>
-                            Release of the <a target="_blank" href="http://apps.neptuo.com/chromium-updater/">Chromium Updater v1.0.2 to download</a>.
+                            Release of the <a target="_blank" href="https://github.com/maraf/GitExtensions.PluginManager/releases">GitExtensions: Plugin Manager  to download</a>.
                         </li>
-
 
 
 
@@ -122,62 +121,15 @@ https://github.com/maraf/ChromiumUpdater</span></a>.
         </div>
                 <div class="folder">
                     <h2 class="folder-heading">Description</h2>
-                    <p>On first run, configuration tab is opened. The application requires folder for downloading zips to and this folder is prefilled with the application instalation folder. This can be quite problem, if the application installed to folder, where current user doesn't have write rights. So be sure to fill folder with write rights.</p>
-<p>Beside this, there are prefilled download URL and file name. These must match structure of Chromium builds structure on the server. This is recommended to not change...</p>
-<p>In the bottom there are some checkboxes for setting automatic downloads and etc. These should match most user preferences.</p>
-
+                    Let's try to use NuGet to distribute plugins for GitExtensions.
                 </div>
                 <div class="folder folder-headless">
                     <div class="additional-image-list">
-<a href="/Content/Images/Projects/chromium-updater-01.png" data-featherlight="image">
-        <img class="additional-image" src="/Content/Images/Projects/chromium-updater-01.png" />
-    </a>
-<a href="/Content/Images/Projects/chromium-updater-02.png" data-featherlight="image">
-        <img class="additional-image" src="/Content/Images/Projects/chromium-updater-02.png" />
-    </a>
-<a href="/Content/Images/Projects/chromium-updater-03.png" data-featherlight="image">
-        <img class="additional-image" src="/Content/Images/Projects/chromium-updater-03.png" />
-    </a>
-<a href="/Content/Images/Projects/chromium-updater-04.png" data-featherlight="image">
-        <img class="additional-image" src="/Content/Images/Projects/chromium-updater-04.png" />
+<a href="/Content/Images/Projects/gitextensions-pluginmanager-01.png" data-featherlight="image">
+        <img class="additional-image" src="/Content/Images/Projects/gitextensions-pluginmanager-01.png" />
     </a>
                     </div>
                     <div class="clear"></div>
-                </div>
-                <div class="folder">
-                    <h2 class="folder-heading">Version history</h2>
-                    <ul class="version">
-                            <li id="v1.0.2">
-                                    <strong>v1.0.2</strong>
-                                                                    <ul>
-
-                                            <li>
-                                                Async file extraction (no UI blocking).
-                                            </li>
-                                    </ul>
-                            </li>
-                            <li id="v1.0.1">
-                                    <strong>v1.0.1</strong>
-                                                                    <ul>
-
-                                            <li>
-                                                Added support for autorun (after user login).
-                                            </li>
-                                            <li>
-                                                Minor issues fixed.
-                                            </li>
-                                    </ul>
-                            </li>
-                            <li id="v1.0.0">
-                                    <strong>v1.0.0</strong>
-                                                                    <ul>
-
-                                            <li>
-                                                Initial release.
-                                            </li>
-                                    </ul>
-                            </li>
-                    </ul>
                 </div>
 </div>
 
@@ -249,6 +201,5 @@ https://github.com/maraf/ChromiumUpdater</span></a>.
         "logo": "/Content/Images/Logo-220.png"
         }
     </script>
-    <!-- <img src="/Content/Images/favicon.png" /> -->
 </body>
 </html>
