--- a/project/desktop/solutionrunner/index.html
+++ b/project/desktop/solutionrunner/index.html
@@ -171,6 +171,26 @@ By pressing enter, you run a new instance of selected Visual Studio version with
                 <div class="folder">
                     <h2 class="folder-heading">Version history</h2>
                     <ul class="version">
+                            <li id="v2.1.0">
+                                    <a target="_blank" href="https://github.com/neptuo/Productivity.SolutionRunner/releases/tag/v2.1.0">
+                                        <strong>v2.1.0</strong>
+                                    </a>
+                                                                    <ul>
+
+                                            <li>
+                                                <a target='_blank' href='https://github.com/neptuo/Productivity.SolutionRunner/issues/116'>#116</a> - Add support for .slnx files (new solution format).
+                                            </li>
+                                            <li>
+                                                <a target='_blank' href='https://github.com/neptuo/Productivity.SolutionRunner/issues/114'>#114</a> - Add support for .slnf files (solution filters).
+                                            </li>
+                                            <li>
+                                                <a target='_blank' href='https://github.com/neptuo/Productivity.SolutionRunner/issues/109'>#109</a> - Add support .code-workspace files (VS Code workspace).
+                                            </li>
+                                            <li>
+                                                <a target='_blank' href='https://github.com/neptuo/Productivity.SolutionRunner/issues/117'>#117</a> - Fix app crashing on start when VS is not installed.
+                                            </li>
+                                    </ul>
+                            </li>
                             <li id="v2.0.0">
                                     <a target="_blank" href="https://github.com/neptuo/Productivity.SolutionRunner/releases/tag/v2.0.0">
                                         <strong>v2.0.0</strong>
